PharmaDemo/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Are_you_a_prescriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you a prescriber?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN__Do_Not_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL(FN__Mapping_Status__c , &apos;Located&apos;),  HYPERLINK( &quot;apex/FN__FindNearbymap?aid=null&amp;lid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) ,   HYPERLINK( &quot;apex/FN__LGeoCode?id=&quot; &amp; Id,&quot;Locate Lead&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nearest_Skin_Centre__c</fullName>
        <label>Nearest Skin Centre</label>
        <picklist>
            <picklistValues>
                <fullName>Bath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridgend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlisle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coventry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dundee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edinburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lanarkshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Llanelli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merthyr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penarth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portsmouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotherham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salisbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheffield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swansea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swindon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teeside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walsall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warwick</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Originating_Website__c</fullName>
        <label>Originating Website</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cillit Bang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easy Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lysol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dettol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harpic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calgon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spray n Wash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woolite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calgonit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrasol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airwick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearasil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurofen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strepsils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lemsip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaviscon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French&apos;s Mustard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French&apos;s Gourmayo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French&apos;s Worcestershire Sauce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French&apos;s Fried Onions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French&apos;s Potato Sticks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frank&apos;s Redhot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cattlemen&apos;s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wherevantage__WhereVantage_Geocoding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the address match details for this record</description>
        <inlineHelpText>Links to the address match details for this record</inlineHelpText>
        <label>WhereVantage Geocoding</label>
        <referenceTo>Wherevantage__WVGeocoding__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Your_Comments__c</fullName>
        <label>Your Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>twitterforce__Profile_Image_URL__c</fullName>
        <label>Profile Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>twitterforce__Profile_Image__c</fullName>
        <formula>IF( twitterforce__Twitter_Username__c != null, IMAGE( &quot;http://img.tweetimag.es/i/&quot; &amp; twitterforce__Twitter_Username__c &amp; &quot;_n&quot;, twitterforce__Twitter_Username__c, 48, 48 ), &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>twitterforce__Twitter_User_ID__c</fullName>
        <label>Twitter User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>twitterforce__Twitter_Username__c</fullName>
        <label>Twitter Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>twitterforce__View_on_Twitter__c</fullName>
        <formula>if( LEN( twitterforce__Twitter_Username__c ) &gt; 0, HYPERLINK(&quot;http://twitter.com/&quot; &amp; twitterforce__Twitter_Username__c, &quot;View on Twitter&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View on Twitter</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>